--- a/CrustPlay/newsArticle.html
+++ b/CrustPlay/newsArticle.html
@@ -65,7 +65,44 @@
 
         <section id="comments">
             <h4>Comments</h4>
-            <h5>Add a comment</h5>
+            <div class="addComment">
+                <form class="unactiveComment">
+                    <input
+                        type="text"
+                        name=""
+                        placeholder="What are your thoughts?"
+                        id=""
+                    />
+                </form>
+
+                <form action="" class="activeComment">
+                    <div class="userCommentProfile">
+                        <img
+                            src="imgs/temp_img.png"
+                            alt=""
+                            class="userCommentPf"
+                        />
+                        <h4>User Name</h4>
+                    </div>
+
+                    <textarea rows="4">Add your thoughts here</textarea>
+
+                    <button type="submit" class="respond">Respond</button>
+                </form>
+            </div>
+            <div class="previousComments">
+                <div class="oldComment">
+                    <div class="oldCommentUser">
+                        <img src="imgs/temp_img.png" alt="" />
+                        <div>
+                            <h4>Name Here</h4>
+                            <p>12 days ago</p>
+                        </div>
+                    </div>
+                    <p class="commentText">this is a sampel text</p>
+                    <button class="commentReplyBtn">Reply</button>
+                </div>
+            </div>
         </section>
 
         <footer>
