--- a/CrustPlay/index.html
+++ b/CrustPlay/index.html
@@ -7,6 +7,11 @@
         <title>CrustPlay</title>
 
         <link rel="stylesheet" href="styles.css" />
+        <link
+            rel="shortcut icon"
+            href="imgs/favicon_logo.ico"
+            type="image/x-icon"
+        />
     </head>
     <body>
         <section id="hero">
