--- a/CrustPlay/shop.html
+++ b/CrustPlay/shop.html
@@ -7,6 +7,11 @@
         <title>Shop | CrustPlay</title>
 
         <link rel="stylesheet" href="styles.css" />
+        <link
+            rel="shortcut icon"
+            href="imgs/favicon_logo.ico"
+            type="image/x-icon"
+        />
     </head>
     <body>
         <header>
