--- a/TredCharts1/index.html
+++ b/TredCharts1/index.html
@@ -63,7 +63,7 @@
 
                 <form
                     method="POST"
-                    action="https://script.google.com/macros/u/2/s/AKfycbyjVa1MRZ84kbAJ6ZPUGyqegdTfZRwY6QTRjmy1NcidIUriie59D3yGO-e--SYrIBPltg/exec"
+                    action="https://api.sheetmonkey.io/form/5Woko6c7FEkV1spQ9ZwH6B"
                 >
                     <input
                         type="name"
