--- a/CrustPlay/index.html
+++ b/CrustPlay/index.html
@@ -119,10 +119,14 @@
 
         <section id="getAwards">
             <h3 class="subTitle">Get Awards</h3>
-            <p class="para" style="text-align: center">
-                Participate in different tournamnets and win GTSwap <br />
-                Tokens to get your awards!
-            </p>
+            <span class="para" style="text-align: center">
+                GTSwap Token is one of the
+                <b>first play-to-earn cryptocurrencies</b>. You can use it to
+                participate in leagues, fantasy contests, tournaments, scrims,
+                battles, challenges,<b> buy gaming peripherals</b>
+                and many more!
+            </span>
+            <a href="https://gtswap.io/token.html">Lean more about GTSwap</a>
         </section>
 
         <section id="recentTournaments">
@@ -229,7 +233,21 @@
             <div class="midContainer">
                 <div class="left">
                     <img src="imgs/logo_main.png" alt="" />
-                    <p class="email para">info@crustplay.com</p>
+
+                    <div class="discord">
+                        <p>
+                            Join our Discord Server for for latest updates,
+                            news, and support.
+                        </p>
+                        <a href="https://discord.gg/jgSReQ7jxK"
+                            ><img
+                                alt="discord"
+                                src="imgs/discord.svg"
+                                style="margin-right: 20px"
+                            />
+                            Join Discord</a
+                        >
+                    </div>
                 </div>
                 <div class="right">
                     <div class="pages">
@@ -244,6 +262,7 @@
                         <a href=""><img src="imgs/in_icon.svg" alt="" /></a>
                         <a href=""><img src="imgs/insta_icon.svg" alt="" /></a>
                     </div>
+                    <p class="email para">info@crustplay.com</p>
                 </div>
             </div>
             <p class="copyright">
