--- a/CrustPlay/news.html
+++ b/CrustPlay/news.html
@@ -84,7 +84,21 @@
             <div class="midContainer">
                 <div class="left">
                     <img src="imgs/logo_main.png" alt="" />
-                    <p class="email para">info@crustplay.com</p>
+
+                    <div class="discord">
+                        <p>
+                            Join our Discord Server for for latest updates,
+                            news, and support.
+                        </p>
+                        <a href="https://discord.gg/jgSReQ7jxK"
+                            ><img
+                                alt="discord"
+                                src="imgs/discord.svg"
+                                style="margin-right: 20px"
+                            />
+                            Join Discord</a
+                        >
+                    </div>
                 </div>
                 <div class="right">
                     <div class="pages">
@@ -99,6 +113,7 @@
                         <a href=""><img src="imgs/in_icon.svg" alt="" /></a>
                         <a href=""><img src="imgs/insta_icon.svg" alt="" /></a>
                     </div>
+                    <p class="email para">info@crustplay.com</p>
                 </div>
             </div>
             <p class="copyright">
