--- a/CrustPlay/newsArticle.html
+++ b/CrustPlay/newsArticle.html
@@ -42,7 +42,7 @@
                         <a href="index.html" class="active">Home</a>
                         <a href="shop.html">Shop</a>
                         <a href="news.html">News</a>
-                        <a href="">About</a>
+                        <a href="about.html">About</a>
                     </div>
                     <a href="" class="downloadBtnCta">Download App</a>
                 </div>
