--- a/CrustPlay/news.html
+++ b/CrustPlay/news.html
@@ -50,7 +50,7 @@
         </header>
 
         <section id="news">
-            <h3 class="pageTitle">Shop</h3>
+            <h3 class="pageTitle">News</h3>
             <div class="newsContainer">
                 <div class="newsCard">
                     <img src="imgs/temp_img.png" alt="" />
