--- a/CrustPlay/index.html
+++ b/CrustPlay/index.html
@@ -133,6 +133,10 @@
             <h3 class="subTitle">Recent Tournaments</h3>
             <div class="tournamentsContainer">
                 <div class="tournamentCard">
+                    <div class="liveTag">
+                        <div class="circle"></div>
+                        <p>LIVE</p>
+                    </div>
                     <img src="imgs/temp_img.png" alt="" class="tournamentImg" />
                     <h4>Tournament Name</h4>
                     <p>Semi Finals</p>
