--- a/CrustPlay/index.html
+++ b/CrustPlay/index.html
@@ -142,6 +142,10 @@
                     <p>Semi Finals</p>
                 </div>
                 <div class="tournamentCard">
+                    <div class="liveTag">
+                        <div class="circle"></div>
+                        <p>LIVE</p>
+                    </div>
                     <img src="imgs/temp_img.png" alt="" class="tournamentImg" />
                     <h4>Tournament Name</h4>
                     <p>Semi Finals</p>
